name:                 helloworld
version:              0.1
synopsis:             An experimentation project
description:          Test project for Trillian
license:              BSD3
license-file:         LICENSE
author:               Tom Lokhorst
maintainer:           Tom Lokhorst <tom@lokhorst.eu>
stability:            Experimental
category:             Education
build-type:           Simple
cabal-version:        >= 1.6

library
  build-depends:      base >= 4 && < 5
  hs-source-dirs:     src
  exposed-modules:    Hello

